CIV-10057 HWF partial remission functionality