@@ -1,6 +1,7 @@
 package uk.gov.hmcts.reform.civil.handler.callback.user;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableMap;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -16,6 +17,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
+import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_START;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.MID;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.SUBMITTED;
@@ -33,7 +35,8 @@ public class PartialRemissionHWFCallbackHandler extends CallbackHandler {
     public static final String ERR_MSG_REMISSION_AMOUNT_LESS_THAN_ZERO = "Remission amount must be greater than zero";
 
     private final ObjectMapper objectMapper;
-    private final Map<String, Callback> callbackMap = Map.of(
+    private final Map<String, Callback> callbackMap = ImmutableMap.of(
+        callbackKey(ABOUT_TO_START), this::emptyCallbackResponse,
         callbackKey(MID, "remission-amount"), this::validateRemissionAmount,
         callbackKey(ABOUT_TO_SUBMIT),
         this::partRemissionHWF,
@@ -52,7 +55,7 @@ public class PartialRemissionHWFCallbackHandler extends CallbackHandler {
 
     private CallbackResponse validateRemissionAmount(CallbackParams callbackParams) {
         var caseData = callbackParams.getCaseData();
-        var claimIssueRemissionAmount = caseData.getClaimIssueRemissionAmount();
+        var claimIssuedRemissionAmount = caseData.getClaimIssueRemissionAmount();
         var hearingRemissionAmount = caseData.getHearingRemissionAmount();
         var claimFeeAmount = caseData.getCalculatedClaimFeeInPence();
         var hearingFeeAmount = caseData.getHearingFeeAmount();
@@ -63,9 +66,9 @@ public class PartialRemissionHWFCallbackHandler extends CallbackHandler {
             errors.add(ERR_MSG_FEE_TYPE_NOT_CONFIGURED);
         }
 
-        if (claimIssueRemissionAmount.signum() == -1 || hearingRemissionAmount.signum() == -1) {
+        if (claimIssuedRemissionAmount.signum() == -1 || hearingRemissionAmount.signum() == -1) {
             errors.add(ERR_MSG_REMISSION_AMOUNT_LESS_THAN_ZERO);
-        } else if (FeeType.CLAIMISSUED == feeType && claimIssueRemissionAmount.compareTo(claimFeeAmount) >= 0) {
+        } else if (FeeType.CLAIMISSUED == feeType && claimIssuedRemissionAmount.compareTo(claimFeeAmount) >= 0) {
             errors.add(ERR_MSG_REMISSION_AMOUNT_LESS_THAN_CLAIM_FEE);
         } else if (FeeType.HEARING == feeType && hearingRemissionAmount.compareTo(hearingFeeAmount) >= 0) {
             errors.add(ERR_MSG_REMISSION_AMOUNT_LESS_THAN_HEARING_FEE);
